feat: :rocket: linking ether.js

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
   <body>
     <button onclick="connect()">connect</button>
   </body>
-
+  <script
+    src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+    type="application/javascript"
+  ></script>
   <script src="./script.js"></script>
 </html>
