--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <button onclick="connect()">connect</button>
+    <h2 class="text-3xl font-bold text-center text-red-500">Ethers.js</h2>
   </body>
   <script
     src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
