--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,16 @@
         </div>
       </div>
 
+        <div class="w-1/2 flex items-center justify-between my-5">
+            <div>
+                <h2 class="text-xl font-bold mb-2 text-black">Get My Account</h2>
+                <h5 class="w-full" id="showAccounts"> </h5>
+            </div>
+
+                <button id="getMyAccounts" onclick="showAccounts()" class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md" >
+                    Get My Account
+                </button>
+            </div>
   </body>
   <script
     src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
