fix: :bug: spliting user input

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
         <div class="flex justify-between">
           <div class="w-3/4">
             <input
-              id="input"
+              id="createAccount"
               type="text"
               class="w-full px-4 py-2 border border-gray-300 rounded-md"
               placeholder="Enter address"
@@ -27,8 +27,9 @@
           </div>
           <div class="w-1/4">
             <button
-              id="send"
+              id="createAccount"
               class="w-full px-4 py-2 text-white bg-blue-500 rounded-md"
+                onclick="createAccount()"
             >
               Create Account
             </button>
