--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
             <button
               id="createAccount"
               class="w-full px-4 py-2 text-white bg-blue-500 rounded-md"
-                onclick="createAccount()"
+              onclick="createAccount()"
             >
               Create Account
             </button>
@@ -41,16 +41,48 @@
         </div>
       </div>
 
-        <div class="w-1/2 flex items-center justify-between my-5">
-            <div>
-                <h2 class="text-xl font-bold mb-2 text-black">Get My Account</h2>
-                <h5 class="w-full" id="showAccounts"> </h5>
-            </div>
+      <div class="w-1/2 flex items-center justify-between my-5">
+        <div>
+          <h2 class="text-xl font-bold mb-2 text-black">Get My Account</h2>
+          <h5 class="w-full" id="showAccounts"></h5>
+        </div>
 
-                <button id="getMyAccounts" onclick="showAccounts()" class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md" >
-                    Get My Account
-                </button>
-            </div>
+        <button
+          id="getMyAccounts"
+          onclick="showAccounts()"
+          class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md"
+        >
+          Get My Account
+        </button>
+      </div>
+
+      <div class="w-1/2 flex items-center justify-between my-5">
+        <div class="w-3/4">
+          <div class="flex w-full flex-row items-center">
+            <h2 class="text-xl font-bold mb-2 text-black">Get Balance</h2>
+            <h5
+              class="w-2/4 text-xl font-bold mb-2 text-black"
+              id="showBalance"
+            >
+              :
+            </h5>
+          </div>
+          <input
+            id="getBalance"
+            type="text"
+            class="w-[80%] px-4 py-2 border border-gray-300 rounded-md"
+            placeholder="Enter address"
+          />
+        </div>
+        <button
+          id="getMyAccounts"
+          onclick="getBalance()"
+          class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md"
+        >
+          Get My Account
+        </button>
+      </div>
+    </div>
   </body>
   <script
     src="http://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
