--- a/client/index.html
+++ b/client/index.html
@@ -71,12 +71,41 @@
             id="getBalance"
             type="text"
             class="w-[80%] px-4 py-2 border border-gray-300 rounded-md"
-            placeholder="Enter address"
+            placeholder="Enter Account ID"
           />
         </div>
         <button
           id="getMyAccounts"
           onclick="getBalance()"
+          class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md"
+        >
+          Get My Account
+        </button>
+      </div>
+
+      <div class="w-1/2 flex items-center justify-between my-5">
+        <div class="w-3/4">
+          <div class="flex w-full flex-row items-center">
+            <h2 class="text-xl font-bold mb-2 text-black">
+              Request to Withdraw
+            </h2>
+          </div>
+          <input
+            id="getAccountId"
+            type="text"
+            class="w-[80%] px-4 py-2 border border-gray-300 rounded-md my-1"
+            placeholder="Enter Account ID"
+          />
+          <input
+            id="getAmount"
+            type="text"
+            class="w-[80%] px-4 py-2 border border-gray-300 rounded-md my-1"
+            placeholder="Enter Amount to Withdraw"
+          />
+        </div>
+        <button
+          id="raiseWithdrawRequest"
+          onclick="handleWithdrawRequest()"
           class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md"
         >
           Get My Account
