--- a/client/index.html
+++ b/client/index.html
@@ -183,7 +183,34 @@
 
     </div>
 
-  
+    <!-- Approve Withdraw Request UI -->
+    <div class="w-1/2 flex items-center justify-between my-5">
+      <div class="w-3/4">
+        <div class="flex w-full flex-row items-center">
+          <h2 class="text-xl font-bold mb-2 text-black">
+            Approve Withdraw Request
+          </h2>
+        </div>
+        <input
+          id="getAccountIdForApproval"
+          type="text"
+          class="w-[80%] px-4 py-2 border border-gray-300 rounded-md my-1"
+          placeholder="Enter Account ID"
+        />
+        <input
+          id="getWithdrawIdForApproval"
+          type="text"
+          class="w-[80%] px-4 py-2 border border-gray-300 rounded-md my-1"
+          placeholder="Enter withdraw ID"
+        />
+      </div>
+      <button
+        id="raiseWithdrawRequest"
+        onclick="handleApproveWithdrawRequest()"
+        class="w-1/4 px-4 py-2 text-white bg-blue-500 rounded-md"
+      >
+        Get My Account
+      </button>
 
   </body>
   <script
